# self-balancing-robot

./: LICENSE.md  README.md
pid-tuning/: pid-tuning.ipynb  serial_reader.py
self-balancing-robot-pio/: .gitignore  CMakeLists.txt  idf_component.yml  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
self-balancing-robot-pio/include/: README  balance_control.h  encoder.h  kalman_filter.h  main.h  motor_driver.h  mpu6050.h  pid_controller.h  web_interface.h
self-balancing-robot-pio/src/: CMakeLists.txt  balance_control.c  balance_control_old.c  encoder.c  kalman_filter.c  main.c  main.cpp  motor_driver.c  mpu6050.c  pid_controller.c  web_interface.c
